Prevented horizontal scrolling on Safari

--- a/packages/css/styles.css
+++ b/packages/css/styles.css
@@ -71,6 +71,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /*========== Variables Dark theme ==========*/
